refactor: revert delete questions route changes, uses PhoenixSwagger.Path.delete to avoid conflicts
